tests/NormalTests/paczka1/fuzzy1/26406730.err
Error in line 7: 7gxAp S662 9,0
Error in line 15: jGL A550 36,5
Error in line 5: SVFUMjfLP A273 20,8
Error in line 33: SVFUMjfLP S662 96,7
